# diploms

./: .gitignore  README.md
a.mulyar/: План GW.docx
a.mulyar/GW/: A_Mulyar_Diplom, comments.docx  Report GW.docx  План GW.docx
r.iermolenko/: План.docx
v.haponov/: .~lock.План.odt#  Valentyn_Haponov.pptx  example2_rus.tar.xz  report.doc  report.docx  show.py  ~$План.odt  План.odt
v.haponov/Article/: Res.aux  Res.out  Res.tex
v.haponov/G4Sabat/: CMakeLists.txt  G4Sabat.cpp  scr.bsh  show.py
v.haponov/Presentation/: Speech.docx  Valentyn_Haponov _presentation.pptx  Valentyn_Haponov.pptx  ~$Speech.docx
v.haponov/Report/: report.aux  report.out  report.tex  report.toc
v.haponov/Sabat/: CMakeLists.txt  README  README.md  init_vis.mac  sabat.cpp  vis.mac
v.haponov/Sabat/config/: debug.mac
v.haponov/Sabat/geometry/: AbstractElement.h  BaseElement.cpp  BaseElement.h  Bottom.cpp  Bottom.h  Detector.cpp  Detector.h  Geometry.cpp  Geometry.h  GeometryFabric.cpp  GeometryFabric.h  Submarine.cpp  Submarine.h
v.haponov/Sabat/include/: ActionInitialization.h  DetectorConstruction.h  EventAction.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  SensitiveDetector.h  SteppingAction.h  SteppingVerbose.h
v.haponov/Sabat/scripts/: RShow.c  run1.mac  sabat.in  show.py
v.haponov/Sabat/scripts/spectrum/: cut_spectrum.pro  main.cpp
v.haponov/Sabat/src/: ActionInitialization.cpp  DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SensitiveDetector.cpp  SteppingAction.cpp  SteppingVerbose.cpp
v.haponov/Sabat/utils/: Utils.cpp  Utils.h
v.haponov/Send/: Valentyn_Haponov_Title_Pages.docx
v.haponov/Spectrum16k/: c47.root  fonB.txt  graph.txt  result_file.txt  singleShow.c  (+7 more)
(+256 files in other folders)
